--- a/views/results.ejs
+++ b/views/results.ejs
@@ -71,7 +71,6 @@
     </div>
 </div>
 
-
 <script>
 //for adding investments
     $(".additem").click(function()
@@ -230,6 +229,36 @@
     });
 </script>
 
+    <div id = "footer" class = "container-fluid" style = "background-color:#f8f9fa ">
+        <div class = "row">
+            <div class = "col-3">
+            </div>
+            <div class = "col-2">
+                <b>About</b>
+                <div style = "font-size: 10px">
+                    Item data is fetched from both the <a href = "https://oldschool.runescape.wiki/">OSRS Wiki</a> and the official OSRS item database API.
+                    <a href = "https://www.osrsbox.com/">OSRSBox</a> is also used for an up to date item list.
+                </div>
+            </div>
+            <div class = "col-2">
+                <b>Disclaimer</b>
+                <div style = "font-size: 10px">
+                    OSRS (Old School RuneScape) is a registered trademark of Jagex Limited. This website is not affiliated with or endorsed by Jagex Limited in any way.
+                </div>
+            </div>
+        </div>
+    </div>
 
+    </body>
 
-<% include ./partials/footer.ejs %>
+    <script> 
+        if ($("body").height() < (window.innerHeight - 150))
+        {
+            $("body").height(window.innerHeight);
+        }
+        else
+        {
+            $("body").height($("body").height() + 150);
+        }
+    </script>
+</html>
