--- a/views/sorted.ejs
+++ b/views/sorted.ejs
@@ -191,9 +191,6 @@
 </div>
 
 
-
-
-
 <script>
 //for adding investments
     $(".additem").click(function()
@@ -531,3 +528,5 @@
         arr = arr.reverse();
     });
 </script>
+
+<% include ./partials/footer.ejs %>
