--- a/views/results.ejs
+++ b/views/results.ejs
@@ -3,11 +3,13 @@
 <div class = "container-fluid">
     <div class = "row">
         <div class = "col-3" id = "optionContainer"> 
-            hallo
+            
         </div>
         <div class = "col-6" id = "mainContainer">
 
-            <h1 class = "text-center"> <%=items.length%> results for "<%= query %>"</h1>
+            <h5 class = "border-bottom">
+                Results for "<%=query%>" <span id = "itemnumrange"></span>
+            </h5>   
             <table class="table table-bordered table-striped table-sm">
                 <% if (items.length > 0) { %>
                     <tr>
@@ -25,7 +27,7 @@
                        <tr class = "item d-none">
                            <td> 
                                <% if (user) { %>
-                                <button class = "additem" 
+                                <button class = "additem btn btn-outline-dark" 
                                 data-item-name = "<%= items[i].name %>" 
                                 data-item-name-lower = "<%= items[i].name_lower %>" 
                                 data-item-price = "<%= items[i].statdata.currentPrice.price %>"
@@ -34,8 +36,8 @@
                                        <i class = "fa fa-plus"> </i> 
                                    </button>
                                <% } %>
-                               <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
                                <img src = "/images/small/<%=items[i].id%>.gif">
+                               <a href = "/item/data/<%= items[i].name_lower %>"><%= items[i].name %> </a> 
                             </td>
                           <!--  <td> <%= items[i].id %> </td> -->
                           <!--  <td> <%= items[i].limit %> </td> -->
@@ -141,9 +143,9 @@
             return false;
         }
     }
-    function toggleItems (hash, numItems)
+    function toggleItems (hash, numItemsShowed)
     {
-        for (var i = (hash - 1) * numItems; i < hash * numItems; i ++)
+        for (var i = (hash - 1) * numItemsShowed; i < hash * numItemsShowed; i ++)
         {
             $(".item:eq(" + i + ")").toggleClass("d-none");
         }
@@ -158,7 +160,14 @@
         }
     }
 
+    function updateItemNumRange(hash)
+    {
+        let itemnumrange = (numItems === 0) ? "" : ( "(" + (((hash - 1) * 10) + 1) + "-" + (((hash * 10) > numItems) ? numItems : hash * 10) + ")" );
+        $("#itemnumrange").html(itemnumrange);
+    }
+
     var numItemsShowed = 10;
+    var numItems = $(".item").length;
     var numPages = Math.ceil($(".item").length / numItemsShowed);
 
     //sanitize hash
@@ -177,8 +186,10 @@
         toggleItems(hash, numItemsShowed);
         togglePagination(hash);
         $("a[href=\"#"+ (hash) +"\"]").focus();
+        updateItemNumRange(hash);
     }
 
+    updateItemNumRange(hash);
 
     $("#next").click(function ()
     {
@@ -229,36 +240,4 @@
     });
 </script>
 
-    <div id = "footer" class = "container-fluid" style = "background-color:#f8f9fa ">
-        <div class = "row">
-            <div class = "col-3">
-            </div>
-            <div class = "col-2">
-                <b>About</b>
-                <div style = "font-size: 10px">
-                    Item data is fetched from both the <a href = "https://oldschool.runescape.wiki/">OSRS Wiki</a> and the official OSRS item database API.
-                    <a href = "https://www.osrsbox.com/">OSRSBox</a> is also used for an up to date item list.
-                </div>
-            </div>
-            <div class = "col-2">
-                <b>Disclaimer</b>
-                <div style = "font-size: 10px">
-                    OSRS (Old School RuneScape) is a registered trademark of Jagex Limited. This website is not affiliated with or endorsed by Jagex Limited in any way.
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </body>
-
-    <script> 
-        if ($("body").height() < (window.innerHeight - 150))
-        {
-            $("body").height(window.innerHeight);
-        }
-        else
-        {
-            $("body").height($("body").height() + 150);
-        }
-    </script>
-</html>
+<% include ./partials/footer.ejs %>
